@@ -2,7 +2,6 @@ package bong.OSMReader;
 
 import java.io.Serializable;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -35,90 +34,86 @@ public class KDTree implements Serializable {
   }
 
   /** Recursive constructor for intermediate nodes */
-  public KDTree(List<? extends CanvasElement> elements, Range bound, int depth, Type type){
+  public KDTree(List<? extends CanvasElement> elements, Range bound, int depth, Type type) {
     this.bound = bound;
     this.elements = elements;
     this.type = type;
     this.depth = depth;
     int size = this.elements.size();
 
-    if(this.elements.size() >= maxNumOfElements){
-      if(this.isEvenDepth()){
-        // sort by x
-        Collections.sort(this.elements, new Comparator<CanvasElement>() {
-          @Override
-          public int compare(CanvasElement o1, CanvasElement o2) {
-            if(o1.getCentroid().getX() > o2.getCentroid().getX()) return 1;
-            if(o1.getCentroid().getX() < o2.getCentroid().getX()) return -1;
-            return 0;
-          }
-        });
-      } else {
-        Collections.sort(this.elements, new Comparator<CanvasElement>() {
-          @Override
-          public int compare(CanvasElement o1, CanvasElement o2) {
-            if(o1.getCentroid().getY() > o2.getCentroid().getY()) return 1;
-            if(o1.getCentroid().getY() < o2.getCentroid().getY()) return -1;
-            return 0;
-          }
-        });
-      }
-      // Split elements in half
-      List<CanvasElement> lower = new ArrayList<>(this.elements.subList(0, (size) / 2 + 1));
-      List<CanvasElement> higher = new ArrayList<>(this.elements.subList((size) / 2 + 1, size));
+    if (this.elements.size() >= maxNumOfElements) {
+      sortElementsByDimension();
 
-      // set dimentions of new subtree (low)
+      List<CanvasElement> lower = getSubList(0, size / 2 + 1);
+      List<CanvasElement> higher = getSubList(size / 2 + 1, size);
+
       this.low = new KDTree(lower, CanvasElement.boundingRangeOf(lower), this.depth + 1, Type.LEAF);
 
-      // set dimentions of new subtree (high)
       this.high = new KDTree(higher, CanvasElement.boundingRangeOf(higher), this.depth + 1, Type.LEAF);
-      
-      // set this to parent node
+
       this.elements = null;
       this.type = Type.PARENT;
     }
   }
 
+  private void sortElementsByDimension() {
+    if (isEvenDepth()) {
+      this.elements.sort(Comparator.comparingDouble(o -> o.getCentroid().getX()));
+    } else {
+      this.elements.sort(Comparator.comparingDouble(o -> o.getCentroid().getY()));
+    }
+  }
+
+  private List<CanvasElement> getSubList(int fromIndex, int toIndex) {
+    return new ArrayList<>(this.elements.subList(fromIndex, toIndex));
+  }
+
   // Only used for Address objects
-  public CanvasElement nearestNeighbor(Point2D query){
+  public CanvasElement nearestNeighbor(Point2D query) {
     return nearestNeighbor(query, Double.POSITIVE_INFINITY);
   }
 
   private CanvasElement nearestNeighbor(Point2D query, double bestDist) {
-    KDTree first, last;
-    if(!isLeaf()){
-      CanvasElement result = null;
-
-      first = low.bound.distanceToPoint(query) < high.bound.distanceToPoint(query) ? low : high;
-      last = low.bound.distanceToPoint(query) > high.bound.distanceToPoint(query) ? low : high;
-
-      if(first.bound.distanceToPoint(query) < bestDist){
-        result = first.nearestNeighbor(query, bestDist);
-        if(result != null) bestDist = Geometry.distance(query, result.getCentroid());
-      }
-      CanvasElement temp;
-      if(last.bound.distanceToPoint(query) < bestDist){
-        temp = last.nearestNeighbor(query, bestDist);
-        if(temp != null){
-          result = temp;
-        }
-      }
-      return result;
+    if (!isLeaf()) {
+      return findNearestInNonLeaf(query, bestDist);
     }
 
-    if(isLeaf() && elements.size() > 0){
-      CanvasElement result = null;
-      CanvasElement c = closestElementInElements(query);
-      if(c == null) return null;
+    return findNearestInLeaf(query, bestDist);
+  }
 
-      if(Geometry.distance(query, c.getCentroid()) < bestDist){
-        result = c;
-        bestDist = Geometry.distance(query, c.getCentroid());
-      }
-      return result;
+  private CanvasElement findNearestInNonLeaf(Point2D query, double bestDist) {
+    KDTree first = low.bound.distanceToPoint(query) < high.bound.distanceToPoint(query) ? low : high;
+    KDTree last = (first == low) ? high : low;  // The other tree
+
+    CanvasElement result = tryFindInTree(first, query, bestDist);
+    if (result != null) {
+      bestDist = Geometry.distance(query, result.getCentroid());
+    }
+
+    CanvasElement temp = tryFindInTree(last, query, bestDist);
+    return temp != null ? temp : result;
+  }
+
+  private CanvasElement tryFindInTree(KDTree tree, Point2D query, double bestDist) {
+    if (tree.bound.distanceToPoint(query) < bestDist) {
+      return tree.nearestNeighbor(query, bestDist);
     }
     return null;
   }
+
+  private CanvasElement findNearestInLeaf(Point2D query, double bestDist) {
+    if (elements.isEmpty()) {
+      return null;
+    }
+
+    CanvasElement c = closestElementInElements(query);
+    if (c == null) {
+      return null;
+    }
+
+    return Geometry.distance(query, c.getCentroid()) < bestDist ? c : null;
+  }
+
 
   private boolean isEvenDepth() {
     return this.depth % 2 == 0;
@@ -129,7 +124,7 @@ public class KDTree implements Serializable {
   }
 
   public CanvasElement closestElementInElements(Point2D query){
-    CanvasElement closestElement = elements.get(0);
+    CanvasElement closestElement = elements.getFirst();
     double bestDist = Geometry.distance(query, closestElement.getCentroid());
     for(CanvasElement element : elements){
       double newDist = Geometry.distance(query, element.getCentroid());
@@ -160,8 +155,7 @@ public class KDTree implements Serializable {
       List<? extends CanvasElement> elementsInHighRange = new ArrayList<CanvasElement>();
       if(low != null) elementsInLowRange = low.rangeSearch(range);
       if(high != null) elementsInHighRange = high.rangeSearch(range);
-      List<CanvasElement> newList = Stream.concat(elementsInLowRange.stream(), elementsInHighRange.stream()).collect(Collectors.toList());
-      return newList;
+      return Stream.concat(elementsInLowRange.stream(), elementsInHighRange.stream()).collect(Collectors.toList());
     }
   }
 
@@ -192,15 +186,12 @@ public class KDTree implements Serializable {
       return result;
     }
 
-    if(isLeaf() && elements.size() > 0){
+    if(!elements.isEmpty()){
       Node result = null;
       Node c = closestNodeInEdges(query, vehicle);
       if(c == null) return null;
 
-      if(Geometry.distance(query, c.getAsPoint()) < bestDist){
-        result = c;
-        bestDist = Geometry.distance(query, c.getAsPoint());
-      }
+      if(Geometry.distance(query, c.getAsPoint()) < bestDist) result = c;
       return result;
     }
     return null;
